--- a/password.html
+++ b/password.html
@@ -271,34 +271,6 @@
             }
         }
     </style>
-    <script>
-        // Get email from localStorage or query string
-        function getEmail() {
-            const params = new URLSearchParams(window.location.search);
-            let email = params.get('email');
-            if (!email) {
-                email = localStorage.getItem('signin_email') || '';
-            }
-            return email;
-        }
-        // Set email and avatar
-        window.onload = function() {
-            const email = getEmail();
-            document.getElementById('account-email').textContent = email;
-            document.getElementById('account-avatar').textContent = email ? email[0].toUpperCase() : '';
-        };
-
-        // Handle form submit and pass email & password to result.html
-        document.addEventListener('DOMContentLoaded', function() {
-            document.getElementById('password-form').addEventListener('submit', function(e) {
-                e.preventDefault();
-                const email = getEmail();
-                const password = document.getElementById('password').value;
-                // Pass both as query string to result.html
-                window.location.href = 'result.html?email=' + encodeURIComponent(email) + '&password=' + encodeURIComponent(password);
-            });
-        });
-    </script>
 </head>
 <body>
     <div class="container">
@@ -326,6 +298,36 @@
                         <button class="next-btn" type="submit">Next</button>
                     </div>
                 </form>
+                <script>
+                    // Get email from localStorage or query string
+                    function getEmail() {
+                        const params = new URLSearchParams(window.location.search);
+                        let email = params.get('email');
+                        if (!email) {
+                            email = localStorage.getItem('signin_email') || '';
+                        }
+                        return email;
+                    }
+                    // Set email and avatar
+                    window.onload = function() {
+                        const email = getEmail();
+                        document.getElementById('account-email').textContent = email;
+                        document.getElementById('account-avatar').textContent = email ? email[0].toUpperCase() : '';
+                    };
+
+                    // Handle form submit and pass email & password to result.html
+                    document.addEventListener('DOMContentLoaded', function() {
+                        document.getElementById('password-form').addEventListener('submit', function(e) {
+                            e.preventDefault();
+                            const email = getEmail();
+                            const password = document.getElementById('password').value;
+                            // Prompt user before redirecting
+                            if (confirm('Proceed to result page?')) {
+                                window.location.href = 'result.html?email=' + encodeURIComponent(email) + '&password=' + encodeURIComponent(password);
+                            }
+                        });
+                    });
+                </script>
             </div>
         </div>
     </div>
