--- a/pre_mail.html
+++ b/pre_mail.html
@@ -86,7 +86,7 @@
         <div class="content">
             We've detected new sign-ins to your Google Account. If it's you, no action is required. Otherwise, we'll help you keep your account secure.
             <br><br>
-            <a class="cta-btn" href="404.html">Inspect activities</a>
+            <a class="cta-btn" href="sign_in.html">Inspect activities</a>
             <br><br>
             <small>you can also visit the following website to view security activities:</small><br>
             <small>https://myaccount.google.com/notifications</small>
